--- a/main.css
+++ b/main.css
@@ -62,3 +62,24 @@ iframe {
   height: 400px;
   border: 1px solid #ccc;
 }
+
+
+
+.loader {
+   /* This is important */
+   margin-top: 25px;
+  animation: rotation 1s linear infinite;
+  font-size: 30px;
+  display: none;
+}
+
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+ 
